--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,8 @@
       }
     </script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <!-- <script src="../server/basic-server.js"></script> -->
+    <!-- <script src="env/config.js"></script> -->
     <script src="scripts/app.js"></script>
   </head>
   <body>
